# AirG-Matheus-Schaly

./: .gitignore  Makefile  README.md  pyproject.toml
questions/: answers.md
questions/question_1/: main.py
questions/question_2/data/: 10_rows.csv  20_rows.csv
questions/question_2/src/: main.py
questions/question_2/tests/: tests.py
questions/question_3/data/: input_bad_formatted.csv  input_well_formatted.csv  output.csv  output_bad_formatted.csv  output_well_formatted.csv
questions/question_3/src/: main.py
src/: question_1.py
