[tool.poetry]
name = "airg-matheus-schaly"
version = "0.1.0"
description = ""
authors = ["Matheus Henrique Schaly <matheushschaly@gmail.com>"]
readme = "README.md"
packages = [{include = "airg_matheus_schaly"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
